# Scaler-Hackathon

./: .gitignore  Dockerfile  README.md  farmer_advisor_dataset.csv  final-requirements.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
api/: main.py
env/: __init__.py  farm_env.py
reference-material/: add_water_variable.py  prevalidation-script.sh  roadmap.md  sample-inference-script.py
scripts/: add_water_variable.py  openai_responses_demo.py
server/: __init__.py  app.py
tasks/: __init__.py  grader_service.py  graders.py  task_definitions.py
